<resources>
    <string name="app_name">DroidWorker Demo</string>

    <string name="action_settings">Settings</string>
    <string name="action_restart">Restart</string>

    <string name="start">Start</string>
    <string name="simple_loader_demo">Simple loader demo</string>
    <string name="simple_rx_loader_demo">Simple Rx loader demo</string>
    <string name="simple_loader_demo_hint">Load bitmap image from network</string>
    <string name="simple_rx_loader_demo_hint">Load bitmap using Job and Observable</string>
    <string name="retrofit_demo">Retrofit GitHub demo</string>
    <string name="retrofit_demo_hint">Load company\'s repository list from GitHub (with pagination)</string>
    <string name="pause_demo">Job Pause/Resume</string>
    <string name="pause_demo_hint">Pause and resume running job</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="pause_demo_description">Job will continue running in background service even if you press
        \'back\' and return to this screen. You can pause job and resume it later even from another
        fragment, activity or from any other component. Finished job will be automatically restarted
        from onViewCreated().
    </string>
    <string name="action_cancel_job">Cancel job</string>
    <string name="cancel_demo">Cancelable Job demo</string>
    <string name="cancel_demo_hint">Cancel running job</string>
    <string name="job_cancelled">Cancelled</string>
    <string name="job_in_progress">Working&#8230;</string>
    <string name="simple_loader_demo_description">The simplest job implementation uses URLConnection to load image from network</string>
    <string name="simple_rx_loader_demo_description">A little example of how you can turn Job into Observable</string>
    <string name="cancel_demo_description">Background work may be easily cancelled</string>
    <string name="multiload_work_demo">Multiple job loaders</string>
    <string name="serial_work_demo">Serial data load demo</string>
    <string name="serial_work_demo_hint">Load list entries one by one</string>
    <string name="async_work_demo">Async data load demo</string>
    <string name="async_work_demo_hint">Load list entries using entire thread pool</string>
    <string name="fork_join_example">Reuse job demo</string>
    <string name="fork_join_example_hint">Start set of jobs from one and return joined result</string>
    <string name="caption_try_again">Try again</string>

    <array name="demo_list">
        <item>@string/simple_loader_demo</item>
        <item>@string/simple_rx_loader_demo</item>
        <item>@string/cancel_demo</item>
        <item>@string/pause_demo</item>
        <item>@string/serial_work_demo</item>
        <item>@string/async_work_demo</item>
        <item>@string/fork_join_example</item>
        <item>@string/retrofit_demo</item>
    </array>

    <array name="demo_list_hints">
        <item>@string/simple_loader_demo_hint</item>
        <item>@string/simple_rx_loader_demo_hint</item>
        <item>@string/cancel_demo_hint</item>
        <item>@string/pause_demo_hint</item>
        <item>@string/serial_work_demo_hint</item>
        <item>@string/async_work_demo_hint</item>
        <item>@string/fork_join_example_hint</item>
        <item>@string/retrofit_demo_hint</item>
    </array>

</resources>
